finish with hero and img

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 </head>
     <title>Btelwind 2.0</title>
 </head>
-<body>
-    <header class="font-prociono bg-body ">
+<body class="">
+    <header class="font-prociono bg-body">
         <section class="text-secondary w-screen h-screen">
             <nav class="flex justify-between w-11/12 mx-auto items-center">
                 <a href=""><img class="w-9 h-7 mt-10" src="./images/mummy-logo.png" alt="">
@@ -46,13 +46,36 @@
             <!-- hero section start -->
              <section>
                 <!-- wrapper div start -->
-                <div>
+                <div class=" grid md:grid-cols-2 grid-col-1 w-11/12 mx-auto gap-4">
                         <!-- slogan start -->
-                        <div></div>
+                        <div>
+                            <h1 class="text-5xl mb-10 text-slate-400">
+                                Experience a journey of a thousand miles with just a single page
+                            </h1>
+                            <p class="mb-10 text-lg text-slate-500">
+                                Join Us Exploring The Most Adventure Form The World Have Ever Felt Before
+                            </p>
+                            <div class="flex gap-10">
+                                <div >
+                                    <button class="px-5 py-3 rounded-md bg-primary">Get Started</button>
+                                </div>
+                                <div>
+                                    <button class="px-5 py-3 rounded-md text-slate-400 border border-white flex ">
+                                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.91 11.672a.375.375 0 0 1 0 .656l-5.603 3.113a.375.375 0 0 1-.557-.328V8.887c0-.286.307-.466.557-.327l5.603 3.112Z" />
+                                          </svg>
+                                          
+                                        <span>Learn More</span></button>
+                                </div>
+                            </div>
+                        </div>
                         <!-- slogan start -->
             <!-- -----+++++++++++++++++++++++++++++++ -->
                         <!-- img start-->
-                        <div></div>
+                        <div class="relative">
+                            <img class="right-5 absolute w-3/4" src="./images/torch-boy.jpg" alt="">
+                        </div>
                         <!-- img end-->
                 </div>
                 <!-- wrapper div end -->
